clang-ir/tests/snapshots/snapshot_fixtures__fixtures_cxx__base_class_addr.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.cxx/base_class_addr.cpp" (cxx, x86_64-unknown-linux-gnu)
fn _Z7up_castP7Derived(%arg1: rec_Derived*) -> rec_Base* [external, c, no_inline, dso_local] {
    ^bb0(%arg1: rec_Derived*):
        %5 = alloca rec_Derived*, "d", align 8
        %6 = alloca rec_Base*, "__retval", align 8
        store %arg1, %5
        %7 = load %5 : rec_Derived*, align 8
        base_class_addr
        store %8, %6
        %9 = load %6 : rec_Base*
        return %9
}
fn _Z9down_castP4Base(%arg0: rec_Base*) -> rec_Derived* [external, c, no_inline, dso_local] {
    ^bb0(%arg0: rec_Base*):
        %0 = alloca rec_Base*, "b", align 8
        %1 = alloca rec_Derived*, "__retval", align 8
        store %arg0, %0
        %2 = load %0 : rec_Base*, align 8
        derived_class_addr
        store %3, %1
        %4 = load %1 : rec_Derived*
        return %4
}
