clang-ir/tests/snapshots/snapshot_fixtures__fixtures_cxx__member_pointer.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.cxx/member_pointer.cpp" (cxx, x86_64-unknown-linux-gnu)
fn _Z11call_methodP3FooMS_FiiEi(%arg2: rec_Foo*, %arg3: s64i, %arg4: s64i, %arg5: s32i) -> s32i [external, c, no_inline, dso_local] {
    ^bb0(%arg2: rec_Foo*, %arg3: s64i, %arg4: s64i, %arg5: s32i):
        %10 = alloca rec_anon_struct, "coerce", align 8
        get_member
        store %arg3, %11
        get_member
        store %arg4, %12
        %13 = load %10 : rec_anon_struct
        %14 = alloca rec_Foo*, "object", align 8
        %15 = alloca rec_anon_struct, "method", align 8
        %16 = alloca s32i, "arg", align 4
        %17 = alloca s32i, "__retval", align 4
        store %arg2, %14
        store %13, %15
        store %arg5, %16
        %18 = load %14 : rec_Foo*, align 8
        %19 = load %15 : rec_anon_struct, align 8
        %20 = const 1 : s64i
        extract_member
        %22 = cast(bitcast) %18 : void*
        ptr_stride
        extract_member
        and
        cmp
        %27 = ternary %26 ? { : (void*, s32i) -> s32i*
                %32 = cast(bitcast) %23 : s8i**
                %33 = load %32 : s8i*
                sub
                ptr_stride
                %36 = cast(bitcast) %35 : (void*, s32i) -> s32i**
                %37 = load %36 : (void*, s32i) -> s32i*
                yield %37
        } : {
                %31 = cast(int_to_ptr) %24 : (void*, s32i) -> s32i*
                yield %31
        }
        %28 = load %16 : s32i, align 4
        %29 = call (%23, %28) : s32i [all]
        store %29, %17
        %30 = load %17 : s32i
        return %30
}
fn _Z11access_dataP3FooMS_i(%arg0: rec_Foo*, %arg1: s64i) -> s32i [external, c, no_inline, dso_local] {
    ^bb0(%arg0: rec_Foo*, %arg1: s64i):
        %0 = alloca rec_Foo*, "object", align 8
        %1 = alloca s64i, "member", align 8
        %2 = alloca s32i, "__retval", align 4
        store %arg0, %0
        store %arg1, %1
        %3 = load %0 : rec_Foo*, align 8
        %4 = load %1 : s64i, align 8
        %5 = cast(bitcast) %3 : s8i*
        ptr_stride
        %7 = cast(bitcast) %6 : s32i*
        %8 = load %7 : s32i, align 4
        store %8, %2
        %9 = load %2 : s32i
        return %9
}
