clang-ir/tests/snapshots/snapshot_fixtures__fixtures_cxx__try_catch_unwind.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.cxx/try_catch_unwind.cpp" (cxx, x86_64-unknown-linux-gnu)
global _ZTIi : u8i* [external, default, dso_local, constant]

fn __gxx_personality_v0(...) -> s32i [external, c, dso_local];
fn _Z5riskyv() -> s32i [external, c];
fn _Z1fv() -> s32i [external, c, no_inline, dso_local] {
        %0 = alloca s32i, "__retval", align 4
        scope {
                %1 = alloca s32i, "e", align 4
                try {
                        %5 = call @_Z5riskyv() : s32i [all]
                        store %5, %0
                        %6 = load %0 : s32i
                        return %6
                    ^bb1:
                        yield
                }
                catch {
                    ^bb0(%arg1: eh_token):
                        %2#0, %2#1 = begin_catch %arg1 : void*
                        cleanup.scope {
                                init_catch_param scalar %2#1 to %1
                                %3 = load %1 : s32i, align 4
                                store %3, %0
                                %4 = load %0 : s32i
                                return %4
                            ^bb1:
                                yield
                        } cleanup all {
                                end_catch %2#0
                                yield
                        }
                        yield
                }
                catch {
                    ^bb0(%arg0: eh_token):
                        resume %arg0
                }
                yield
        }
        trap
}
